[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MAIN_MENU_Sound.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/sfx_vol.png" type="Texture" id=2]
[ext_resource path="res://textures/UI/music_vol.png" type="Texture" id=3]
[ext_resource path="res://textures/UI/sliderPointer.png" type="Texture" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://textures/UI/closemenu.png" type="Texture" id=6]
[ext_resource path="res://textures/title.png" type="Texture" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.17735, -34.7532 )
scale = Vector2( 6.9, 6.9 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 6.9, 6.9 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Control" type="Control" parent="."]
anchor_left = -0.25
anchor_top = -0.247
anchor_right = 0.249
anchor_bottom = 0.25
margin_left = -0.297302
margin_top = 0.300003
margin_right = 0.302704
margin_bottom = 1.52588e-05
rect_pivot_offset = Vector2( -36.3703, -170.627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeMenuButton" type="Button" parent="Control"]
anchor_left = 0.236546
anchor_top = 0.803132
anchor_right = 0.764706
anchor_bottom = 0.964206
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="title" type="Sprite" parent="Control"]
modulate = Color( 0.568627, 0.227451, 0.227451, 1 )
material = SubResource( 1 )
position = Vector2( 920.22, 170.713 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
offset = Vector2( -1034.42, -181.263 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = 233.41
margin_top = 125.495
margin_right = 570.41
margin_bottom = 199.495
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
margin_left = 207.217
margin_top = 239.705
margin_right = 595.217
margin_bottom = 313.705
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Control"]
modulate = Color( 0.568627, 0.227451, 0.227451, 1 )
margin_left = 51.366
margin_top = 201.587
margin_right = 752.366
margin_bottom = 217.587
custom_icons/grabber = ExtResource( 4 )
min_value = -40.0
max_value = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="Control"]
modulate = Color( 0.568627, 0.227451, 0.227451, 1 )
margin_left = 50.6168
margin_top = 322.2
margin_right = 751.617
margin_bottom = 338.2
custom_icons/grabber = ExtResource( 4 )
min_value = -40.0
max_value = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/closeMenuButton" to="." method="_on_closeMenuButton_pressed"]
[connection signal="value_changed" from="Control/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Control/HSlider2" to="." method="_on_HSlider2_value_changed"]
